--- a/NR/NRApp/templates/disapproval.html
+++ b/NR/NRApp/templates/disapproval.html
@@ -10,7 +10,7 @@
             </div>
             <div class="card-body">
                 <div class="alert alert-danger text-center" role="alert">
-                    Unfortunately, you are not eligible at this time.
+                    Unfortunately, you are not eligible at this time for CRG.
                 </div>
                 <h4 class="text-center">Obligor Details</h4>
                 <div class="row">
@@ -19,11 +19,11 @@
                             <tbody>
                                 <tr>
                                     <th scope="row">Business Name</th>
-                                    <td>unavailable</td>
+                                    <td>{{ user.business_name }}</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">Business Email</th>
-                                    <td>unavailable</td>
+                                    <td>{{ user.email }}</td>
                                 </tr>
                             </tbody>
                         </table>
