--- a/NR/NRApp/templates/edit_user.html
+++ b/NR/NRApp/templates/edit_user.html
@@ -23,7 +23,7 @@
     {% endwith %}
 
     <form method="POST">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+        {{ form.hidden_tag() }}
         <!-- Level 1 Fields -->
         <div class="card mb-4">
             <div class="card-header bg-primary text-white">Business Information</div>
