--- a/NR/NRApp/templates/prediction.html
+++ b/NR/NRApp/templates/prediction.html
@@ -24,7 +24,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <input type="number" step="0.01" name="PROPOSED_FACILITY_AMOUNT" required class="form-control" value="{{ PROPOSED_FACILITY_AMOUNT }}">
+                                <input type="number" step="0.01" name="PROPOSED_FACILITY_AMOUNT" required class="form-control" value="{{ user.PROPOSED_FACILITY_AMOUNT }}">
                             </td>
                             <td>
                                 <select name="BUSINESS_PROJECT" required class="form-control">
@@ -75,7 +75,7 @@
                     </tbody>
                 </table>
                 <div class="text-center">
-                    <input type="submit" value="Submit" class="btn btn-success">
+                    <input type="submit" value="Predict" class="btn btn-success">
                     <input type="reset" value="Reset" class="btn btn-secondary">
                 </div>
             </form>
