--- a/NR/NRApp/templates/users.html
+++ b/NR/NRApp/templates/users.html
@@ -20,6 +20,7 @@
                     <th>Email</th>
                     <th>State</th>
                     <th>Application ID</th>
+                    <th>amount</th>
                 </tr>
             </thead>
             <tbody>
@@ -32,6 +33,7 @@
                     <td>{{ user.email }}</td>
                     <td>{{ user.state }}</td>
                     <td>{{ user.prediction_id }}</td>
+                    <td>{{ user.proposed_facility_amount }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
