--- a/NR/NRApp/templates/prediction.html
+++ b/NR/NRApp/templates/prediction.html
@@ -24,7 +24,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <input type="number" step="0.01" name="PROPOSED_FACILITY_AMOUNT" required class="form-control" value="{{ user.PROPOSED_FACILITY_AMOUNT }}">
+                                <input type="number" step="0.01" name="PROPOSED_FACILITY_AMOUNT" required class="form-control" value="{{ PROPOSED_FACILITY_AMOUNT }}">
                             </td>
                             <td>
                                 <select name="BUSINESS_PROJECT" required class="form-control">
